2004-02-07 00:52  sisoft

	* Changes, Makefile.am, cvs_com, debian/.cvsignore,
	debian/Makefile.am:

	correct includes.
	fix crash on outoging calls over ip.
	more debugs in queue scan.
	fix chat in binkp.
	in qcc: show '=' in queue on active addresses.
	
2004-02-05 22:51  sisoft

	* Changes, FAQ, Makefile.am, README, configure.in,
	qico.conf.sample, debian/.cvsignore, debian/Makefile.am,
	debian/docs, src/Makefile.am, src/aso.c, src/binkp.c, src/bso.c,
	src/byteop.h, src/call.c, src/clserv.c, src/config.c, src/daemon.c,
	src/emsi.c, src/flagexp.y, src/flaglex.l, src/ftn.c, src/ftn.h,
	src/headers.h, src/hydra.c, src/hydra.h, src/janus.c, src/log.c,
	src/ls_zmodem.c, src/ls_zmodem.h, src/ls_zsend.c, src/mailer.h,
	src/main.c, src/md5.c, src/nodelist.c, src/protfm.c, src/qcc.c,
	src/qconf.x, src/qctl.c, src/qipc.c, src/qnlc.c, src/queue.c,
	src/session.c, src/tcp.c, src/tools.c, src/tools.h, src/tty.c,
	src/tty.h, src/types.h:

	in conf.sample: remove (new!) markers and some corrections.
	remove trailing spaces from sources.
	add makefile in /debian.
	strip down ftn* to tools*.
	
2004-02-05 16:09  sisoft

	* Changes, qico.conf.sample, src/ftn.c, src/qconf.x, src/tcp.c:

	added socks4 and socks5 support. added keword 'socks'.
	
2004-02-02 20:31  sisoft

	* cvs_com, qico.conf.sample, src/binkp.c, src/binkp.h, src/emsi.c,
	src/ftn.c, src/protfm.c, src/qcc.c:

	in qcc: fix get info about node.
	free unused memory after binkp.
	fix making emsi data.
	added chat for binkp and option 'T' for 'binkpopt'.
	
2004-02-01 21:11  sisoft

	* Changes, configure.in, src/clserv.c, src/daemon.c, src/emsi.c,
	src/freq.c, src/ftn.c, src/log.c, src/protfm.c, src/session.c,
	src/tcp.c:

	another paranoidal changes.
	change f_notify to dnotify (as in kernel).
	fix crash if bad ip packet recv.
	fix 'mapout' keyword.
	use basename() in mapping.
	
2004-01-27 00:24  sisoft

	* Changes, src/daemon.c, src/nodelist.c, src/qipc.c:

	fix 'translatesubst' on outgoing from daemon.
	