@@ -1,10 +1,7 @@
-/* $Id: TodayFixes,v 1.28 2004/02/06 21:54:46 sisoft Exp $ */
+/* $Id: TodayFixes,v 1.29 2004/02/07 20:37:14 sisoft Exp $ */
 ---
-correct includes.
-fix crash on outoging calls over ip.
-more debugs in queue scan.
-fix chat in binkp.
-in qcc: show '=' in queue on active addresses.
+in qcc: change error to warning if file not accessed.
+in qcc: increase maximum lines to 16.
 .
 previous:
 ---
